--- a/src/main/resources/com/saburi/finance/main/JournalEntry.fxml
+++ b/src/main/resources/com/saburi/finance/main/JournalEntry.fxml
@@ -20,115 +20,127 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id = "mVBox" id="JournalEntry" spacing="4" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.saburi.finance.controllers.JournalEntryController">
+<VBox id="JournalEntry" fx:id="mVBox" spacing="2" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.saburi.finance.controllers.JournalEntryController">
     <children>
 
-        <GridPane vgap ="4" hgap="4">
+        <GridPane hgap="5" vgap="2">
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
             <Label id="JournalEntry" fx:id="lblFinancialPeriod" minWidth="100" text="Financial Period" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <ComboBox fx:id = "cboFinancialPeriod" id = "JournalEntry"  GridPane.rowIndex = "0" GridPane.columnIndex = "1" promptText = "Select Financial Period" minWidth="185.0">
+            <ComboBox id="JournalEntry" fx:id="cboFinancialPeriod" minWidth="185.0" promptText="Select Financial Period" GridPane.columnIndex="1" GridPane.rowIndex="0">
                 <contextMenu>
-                    <ContextMenu fx:id ="cmuSelectFinancialPeriod" id = "JournalEntry">
+                    <ContextMenu id="JournalEntry" fx:id="cmuSelectFinancialPeriod">
                         <items>
-                            <MenuItem mnemonicParsing="false" fx:id ="cmiSelectFinancialPeriod" id = "JournalEntry" text="Select FinancialPeriod" />
+                            <MenuItem id="JournalEntry" fx:id="cmiSelectFinancialPeriod" mnemonicParsing="false" text="Select FinancialPeriod" />
                         </items>
                     </ContextMenu>
                 </contextMenu>
             </ComboBox>  
             <Label id="JournalEntry" fx:id="lblJournalID" minWidth="100" text="Journal ID" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-            <TextField fx:id = "txtJournalID" id = "JournalEntry"  GridPane.rowIndex = "1" GridPane.columnIndex = "1"  minWidth="100" promptText = "Enter Journal ID">
+            <TextField id="JournalEntry" fx:id="txtJournalID" minWidth="100" promptText="Enter Journal ID" GridPane.columnIndex="1" GridPane.rowIndex="1">
                 <contextMenu>
-                    <ContextMenu fx:id ="cmuSelectJournalID" id = "JournalEntry">
+                    <ContextMenu id="JournalEntry" fx:id="cmuSelectJournalID">
                         <items>
-                            <MenuItem mnemonicParsing="false" fx:id ="cmiLoad" id = "JournalEntry" text="Load" />   
+                            <MenuItem id="JournalEntry" fx:id="cmiLoad" mnemonicParsing="false" text="Load" />   
                         </items>
                     </ContextMenu>
                 </contextMenu>
             </TextField>  
             <Label id="JournalEntry" fx:id="lblEntryDate" minWidth="100" text="Entry Date" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-            <DatePicker fx:id = "dtpEntryDate" id = "JournalEntry"  GridPane.rowIndex = "2" GridPane.columnIndex = "1" minWidth="185.0"/> 
+            <DatePicker id="JournalEntry" fx:id="dtpEntryDate" minWidth="185.0" GridPane.columnIndex="1" GridPane.rowIndex="2" /> 
             <Label id="JournalEntry" fx:id="lblNarration" minWidth="100" text="Narration" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-            <TextArea fx:id = "txaNarration" id = "JournalEntry"  GridPane.rowIndex = "3" GridPane.columnIndex = "1" prefWidth="100" promptText = "Enter Narration"/> 
+            <TextArea id="JournalEntry" fx:id="txaNarration" prefWidth="100" promptText="Enter Narration" GridPane.columnIndex="1" GridPane.rowIndex="3" /> 
             <Label id="JournalEntry" fx:id="lblDocumentType" minWidth="100" text="Document Type" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-            <ComboBox fx:id = "cboDocumentType" id = "JournalEntry"  GridPane.rowIndex = "4" GridPane.columnIndex = "1" promptText = "Select Document Type" minWidth="185.0"/> 
+            <ComboBox id="JournalEntry" fx:id="cboDocumentType" minWidth="185.0" promptText="Select Document Type" GridPane.columnIndex="1" GridPane.rowIndex="4" /> 
             <Label id="JournalEntry" fx:id="lblDocumentNo" minWidth="100" text="Document No" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-            <TextField fx:id = "txtDocumentNo" id = "JournalEntry"  GridPane.rowIndex = "0" GridPane.columnIndex = "3" minWidth="100" promptText = "Enter Document No"/> 
+            <TextField id="JournalEntry" fx:id="txtDocumentNo" minWidth="100" promptText="Enter Document No" GridPane.columnIndex="3" GridPane.rowIndex="0" /> 
             <Label id="JournalEntry" fx:id="lblReferenceNo" minWidth="100" text="Reference No" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <TextField fx:id = "txtReferenceNo" id = "JournalEntry"  GridPane.rowIndex = "1" GridPane.columnIndex = "3" minWidth="100" promptText = "Enter Reference No"/> 
+            <TextField id="JournalEntry" fx:id="txtReferenceNo" minWidth="100" promptText="Enter Reference No" GridPane.columnIndex="3" GridPane.rowIndex="1" /> 
             <Label id="JournalEntry" fx:id="lblCurrency" minWidth="100" text="Currency" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <ComboBox fx:id = "cboCurrency" id = "JournalEntry"  GridPane.rowIndex = "2" GridPane.columnIndex = "3" promptText = "Select Currency" minWidth="185.0">
+            <ComboBox id="JournalEntry" fx:id="cboCurrency" minWidth="185.0" promptText="Select Currency" GridPane.columnIndex="3" GridPane.rowIndex="2">
                 <contextMenu>
-                    <ContextMenu fx:id ="cmuSelectCurrency" id = "JournalEntry">
+                    <ContextMenu id="JournalEntry" fx:id="cmuSelectCurrency">
                         <items>
-                            <MenuItem mnemonicParsing="false" fx:id ="cmiSelectCurrency" id = "JournalEntry" text="Select Currency" />
+                            <MenuItem id="JournalEntry" fx:id="cmiSelectCurrency" mnemonicParsing="false" text="Select Currency" />
                         </items>
                     </ContextMenu>
                 </contextMenu>
             </ComboBox>  
             <Label id="JournalEntry" fx:id="lblBaseAmount" minWidth="100" text="Base Amount" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <TextField fx:id = "txtBaseAmount" id = "JournalEntry"  GridPane.rowIndex = "3" GridPane.columnIndex = "3" minWidth="100" promptText = "Enter Base Amount"/> 
+            <TextField id="JournalEntry" fx:id="txtBaseAmount" minWidth="100" promptText="Enter Base Amount" GridPane.columnIndex="3" GridPane.rowIndex="3" /> 
             <Label id="JournalEntry" fx:id="lblExchangeRate" minWidth="100" text="Exchange Rate" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-            <TextField fx:id = "txtExchangeRate" id = "JournalEntry"  GridPane.rowIndex = "4" GridPane.columnIndex = "3" minWidth="100" editable = "false"/> 
+            <TextField id="JournalEntry" fx:id="txtExchangeRate" editable="false" minWidth="100" GridPane.columnIndex="3" GridPane.rowIndex="4" /> 
             <Label id="JournalEntry" fx:id="lblAmount" minWidth="100" text="Amount" GridPane.columnIndex="4" GridPane.rowIndex="0" />
-            <TextField fx:id = "txtAmount" id = "JournalEntry"  GridPane.rowIndex = "0" GridPane.columnIndex = "5" minWidth="100" editable = "false"/> 
+            <TextField id="JournalEntry" fx:id="txtAmount" editable="false" minWidth="100" GridPane.columnIndex="5" GridPane.rowIndex="0" /> 
             <Label id="JournalEntry" fx:id="lblAmountWords" minWidth="100" text="Amount Words" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-            <TextArea fx:id = "txaAmountWords" id = "JournalEntry"  GridPane.rowIndex = "1" GridPane.columnIndex = "5" prefWidth="100" editable = "false"/> 
+            <TextArea id="JournalEntry" fx:id="txaAmountWords" editable="false" prefWidth="100" GridPane.columnIndex="5" GridPane.rowIndex="1" /> 
             <Label id="JournalEntry" fx:id="lblPostStatus" minWidth="100" text="Post Status" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-            <ComboBox fx:id = "cboPostStatus" id = "JournalEntry"  GridPane.rowIndex = "2" GridPane.columnIndex = "5" promptText = "Select Post Status" minWidth="185.0"/> 
+            <ComboBox id="JournalEntry" fx:id="cboPostStatus" minWidth="185.0" promptText="Select Post Status" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+         <columnConstraints>
+            <ColumnConstraints />
+            <ColumnConstraints />
+            <ColumnConstraints />
+            <ColumnConstraints />
+            <ColumnConstraints />
+            <ColumnConstraints />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+         </rowConstraints> 
             
         </GridPane>
 
 
 
-        <TableView fx:id="tblJournalEntryDetails" id = "JournalEntryDetails" VBox.vgrow="ALWAYS" minHeight="300" minWidth="450">
-            <padding>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-            </padding>
+        <TableView id="JournalEntryDetails" fx:id="tblJournalEntryDetails" minHeight="300" minWidth="450" VBox.vgrow="ALWAYS">
             <columns>
-                <TableColumn id="JournalEntry" fx:id="tbcJournalEntryDetailAccountGroup" text="Account Group" editable="true">
+                <TableColumn id="JournalEntry" fx:id="tbcJournalEntryDetailAccountGroup" editable="true" text="Account Group">
                     <cellValueFactory>
                         <PropertyValueFactory property="AccountGroup" />
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn id="JournalEntry" fx:id="tbcJournalEntryDetailAccountID" text="Account ID" editable="true">
+                <TableColumn id="JournalEntry" fx:id="tbcJournalEntryDetailAccountID" editable="true" text="Account ID">
                     <cellValueFactory>
                         <PropertyValueFactory property="AccountID" />
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn id="JournalEntry" fx:id="tbcJournalEntryDetailAccountName" text="Account Name" editable="true">
+                <TableColumn id="JournalEntry" fx:id="tbcJournalEntryDetailAccountName" editable="true" text="Account Name">
                     <cellValueFactory>
                         <PropertyValueFactory property="AccountName" />
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn id="JournalEntry" fx:id="tbcJournalEntryDetailAccountType" text="Account Type" editable="true">
+                <TableColumn id="JournalEntry" fx:id="tbcJournalEntryDetailAccountType" editable="true" text="Account Type">
                     <cellValueFactory>
                         <PropertyValueFactory property="AccountType" />
                     </cellValueFactory>
                 </TableColumn>
                
-                <TableColumn id="JournalEntry" fx:id="tbcJournalEntryDetailAccountAction" text="Account Action" editable="true">
+                <TableColumn id="JournalEntry" fx:id="tbcJournalEntryDetailAccountAction" editable="true" text="Account Action">
                     <cellValueFactory>
                         <PropertyValueFactory property="AccountAction" />
                     </cellValueFactory>
                 </TableColumn>
                 
-                <TableColumn id="JournalEntry" fx:id="tbcJournalEntryDetailAmount" text="Amount" editable="true">
+                <TableColumn id="JournalEntry" fx:id="tbcJournalEntryDetailAmount" editable="true" text="Amount">
                     <cellValueFactory>
                         <PropertyValueFactory property="AmountDisplay" />
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn id="JournalEntry" fx:id="tbcJournalEntryDetailNotes" text="Notes" editable="true">
+                <TableColumn id="JournalEntry" fx:id="tbcJournalEntryDetailNotes" editable="true" text="Notes">
                     <cellValueFactory>
                         <PropertyValueFactory property="Notes" />
                     </cellValueFactory>
                 </TableColumn>
             </columns>
             <contextMenu>
-                <ContextMenu fx:id ="cmuJournalEntryDetails" id = "JournalEntry">
+                <ContextMenu id="JournalEntry" fx:id="cmuJournalEntryDetails">
                     <items>
-                        <MenuItem mnemonicParsing="false" fx:id ="cmiSelectJournalAccount" id = "JournalEntry" text="Select Account" />
+                        <MenuItem id="JournalEntry" fx:id="cmiSelectJournalAccount" mnemonicParsing="false" text="Select Account" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -139,11 +151,11 @@
                 <Button id="JournalEntry" fx:id="btnSearch" prefWidth="80.0" text="Search" visible="false" />
                 <Button id="JournalEntry" fx:id="btnSave" prefHeight="25.0" prefWidth="80.0" text="Save" />
             </VBox>
-            <HBox layoutX="137.0" layoutY="18.0" spacing="5">
+            <HBox layoutX="137.0" layoutY="18.0" spacing="10">
                 <padding>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                 </padding>
-                <Label id="JournalEntry" fx:id="lblBalance" minWidth="100" text="Balance" />
+                <Label id="JournalEntry" fx:id="lblBalance"  text="Balance" />
                 <TextField id="JournalEntry" fx:id="txtBalance" editable="false" minWidth="50" prefHeight="6.0" text="0" />
          
                 <Label fx:id="lblBalanceStatus" text="(Balanced)" textFill="#e25d5d">
@@ -151,6 +163,7 @@
                         <Font name="Serif Regular" size="12.0" />
                     </font>
                 </Label>
+                <Button id="JournalEntry" fx:id="btnPost" text="Post" visible="false" />
             </HBox>
        
 
