--- a/src/main/resources/com/saburi/finance/main/Customer.fxml
+++ b/src/main/resources/com/saburi/finance/main/Customer.fxml
@@ -1,117 +1,155 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.VBox?>
+
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ContextMenu?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
-<VBox fx:id = "mVBox" id="Customer"  spacing="5"  xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.saburi.finance.controllers.CustomerController">
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+
+<VBox id="Customer" fx:id="mVBox" spacing="2" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.saburi.finance.controllers.CustomerController">
     <children>
 
-        <GridPane vgap ="2" hgap="10">
+        <GridPane hgap="5" vgap="2">
             <padding>
-                <Insets bottom="0.0" left="10.0" right="10.0" top="10.0" />
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
-            <Label id="Customer" fx:id="lblCustomerID" minWidth="100" text="Customer ID" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <TextField fx:id = "txtCustomerID" id = "Customer"  GridPane.rowIndex = "0" GridPane.columnIndex = "1"  minWidth="100" promptText = "Enter Customer ID">
+            <Label id="Customer" fx:id="lblCustomerID" minWidth="120" text="Customer ID" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+            <TextField id="Customer" fx:id="txtCustomerID" minWidth="100" promptText="Enter Customer ID" GridPane.columnIndex="1" GridPane.rowIndex="0">
                 <contextMenu>
-                    <ContextMenu fx:id ="cmuSelectCustomerID" id = "Customer">
+                    <ContextMenu id="Customer" fx:id="cmuSelectCustomerID">
                         <items>
-                            <MenuItem mnemonicParsing="false" fx:id ="cmiLoad" id = "Customer" text="Load" />   
+                            <MenuItem id="Customer" fx:id="cmiLoad" mnemonicParsing="false" text="Load" />   
                         </items>
                     </ContextMenu>
                 </contextMenu>
             </TextField>  
             <Label id="Customer" fx:id="lblCustomerName" minWidth="100" text="Customer Name" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-            <TextField fx:id = "txtCustomerName" id = "Customer"  GridPane.rowIndex = "1" GridPane.columnIndex = "1" minWidth="100" promptText = "Enter Customer Name"/> 
+            <TextField id="Customer" fx:id="txtCustomerName" minWidth="100" promptText="Enter Customer Name" GridPane.columnIndex="1" GridPane.rowIndex="1" /> 
             <Label id="Customer" fx:id="lblCustomerCategory" minWidth="100" text="Customer Category" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-            <ComboBox fx:id = "cboCustomerCategory" id = "Customer"  GridPane.rowIndex = "2" GridPane.columnIndex = "1" promptText = "Select Customer Category" minWidth="185.0">
+            <ComboBox id="Customer" fx:id="cboCustomerCategory" minWidth="185.0" promptText="Select Customer Category" GridPane.columnIndex="1" GridPane.rowIndex="2">
                 <contextMenu>
-                    <ContextMenu fx:id ="cmuSelectCustomerCategory" id = "Customer">
+                    <ContextMenu id="Customer" fx:id="cmuSelectCustomerCategory">
                         <items>
-                            <MenuItem mnemonicParsing="false" fx:id ="cmiSelectCustomerCategory" id = "Customer" text="Select Customer Category" />
+                            <MenuItem id="Customer" fx:id="cmiSelectCustomerCategory" mnemonicParsing="false" text="Select Customer Category" />
                         </items>
                     </ContextMenu>
                 </contextMenu>
             </ComboBox>  
-            <Label id="Customer" fx:id="lblPhoneNo" minWidth="100" text="PhoneNo" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-            <TextField fx:id = "txtPhoneNo" id = "Customer"  GridPane.rowIndex = "3" GridPane.columnIndex = "1" minWidth="100" promptText = "Enter PhoneNo"/> 
+            <Label id="Customer" fx:id="lblPhoneNo" minWidth="100" text="Phone No" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+            <TextField id="Customer" fx:id="txtPhoneNo" minWidth="100" promptText="Enter Phone No" GridPane.columnIndex="1" GridPane.rowIndex="3" /> 
             <Label id="Customer" fx:id="lblEmail" minWidth="100" text="Email" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-            <TextField fx:id = "txtEmail" id = "Customer"  GridPane.rowIndex = "4" GridPane.columnIndex = "1" minWidth="100" promptText = "Enter Email"/> 
+            <TextField id="Customer" fx:id="txtEmail" minWidth="100" promptText="Enter Email" GridPane.columnIndex="1" GridPane.rowIndex="4" /> 
             <Label id="Customer" fx:id="lblAddress" minWidth="100" text="Address" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-            <TextArea fx:id = "txaAddress" id = "Customer"  GridPane.rowIndex = "5" GridPane.columnIndex = "1" prefWidth="100" prefHeight ="50" promptText = "Enter Address"/> 
+            <TextArea id="Customer" fx:id="txaAddress" prefHeight="50" prefWidth="100" promptText="Enter Address" GridPane.columnIndex="1" GridPane.rowIndex="5" /> 
             <Label id="Customer" fx:id="lblPriceGroup" minWidth="100" text="Price Group" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-            <ComboBox fx:id = "cboPriceGroup" id = "Customer"  GridPane.rowIndex = "6" GridPane.columnIndex = "1" promptText = "Select Price Group" minWidth="185.0">
+            <ComboBox id="Customer" fx:id="cboPriceGroup" minWidth="185.0" promptText="Select Price Group" GridPane.columnIndex="1" GridPane.rowIndex="6">
                 <contextMenu>
-                    <ContextMenu fx:id ="cmuSelectPriceGroup" id = "Customer">
+                    <ContextMenu id="Customer" fx:id="cmuSelectPriceGroup">
                         <items>
-                            <MenuItem mnemonicParsing="false" fx:id ="cmiSelectPriceGroup" id = "Customer" text="Select Price Group" />
+                            <MenuItem id="Customer" fx:id="cmiSelectPriceGroup" mnemonicParsing="false" text="Select Price Group" />
                         </items>
                     </ContextMenu>
                 </contextMenu>
             </ComboBox>  
-            <Label id="Customer" fx:id="lblBillToCustomer" minWidth="100" text="Bill To Customer" GridPane.columnIndex="0" GridPane.rowIndex="7" />
-            <ComboBox fx:id = "cboBillToCustomer" id = "Customer"  GridPane.rowIndex = "7" GridPane.columnIndex = "1" promptText = "Select Bill To Customer" minWidth="185.0">
+            <Label id="Customer" fx:id="lblDefaultSponser" minWidth="100" text="Default Sponser" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+            <ComboBox id="Customer" fx:id="cboDefaultSponser" minWidth="185.0" promptText="Select Default Sponser" GridPane.columnIndex="1" GridPane.rowIndex="7">
                 <contextMenu>
-                    <ContextMenu fx:id ="cmuSelectBillToCustomer" id = "Customer">
+                    <ContextMenu id="Customer" fx:id="cmuSelectDefaultSponser">
                         <items>
-                            <MenuItem mnemonicParsing="false" fx:id ="cmiSelectBillToCustomer" id = "Customer" text="Select Bill To Customer" />
+                            <MenuItem id="Customer" fx:id="cmiSelectDefaultSponser" mnemonicParsing="false" text="Select Default Sponser" />
                         </items>
                     </ContextMenu>
                 </contextMenu>
             </ComboBox>  
-            <Label id="Customer" fx:id="lblCustomerPostingGroup" minWidth="150" text="Customer Posting Group" GridPane.columnIndex="0" GridPane.rowIndex="8" />
-            <ComboBox fx:id = "cboCustomerPostingGroup" id = "Customer"  GridPane.rowIndex = "8" GridPane.columnIndex = "1" promptText = "Select Customer Posting Group" minWidth="185.0">
+            <Label id="Customer" fx:id="lblCustomerPostingGroup" minWidth="130" text="Customer Posting Group" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+            <ComboBox id="Customer" fx:id="cboCustomerPostingGroup" minWidth="185.0" promptText="Select Customer Posting Group" GridPane.columnIndex="3" GridPane.rowIndex="0">
                 <contextMenu>
-                    <ContextMenu fx:id ="cmuSelectCustomerPostingGroup" id = "Customer">
+                    <ContextMenu id="Customer" fx:id="cmuSelectCustomerPostingGroup">
                         <items>
-                            <MenuItem mnemonicParsing="false" fx:id ="cmiSelectCustomerPostingGroup" id = "Customer" text="Select Customer Posting Group" />
+                            <MenuItem id="Customer" fx:id="cmiSelectCustomerPostingGroup" mnemonicParsing="false" text="Select Customer Posting Group" />
                         </items>
                     </ContextMenu>
                 </contextMenu>
             </ComboBox>  
-            <Label id="Customer" fx:id="lblBusinessGroup" minWidth="100" text="Business Group" GridPane.columnIndex="0" GridPane.rowIndex="9" />
-            <ComboBox fx:id = "cboBusinessGroup" id = "Customer"  GridPane.rowIndex = "9" GridPane.columnIndex = "1" promptText = "Select Business Group" minWidth="185.0">
+            <Label id="Customer" fx:id="lblBusinessGroup" minWidth="100" text="Business Group" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <ComboBox id="Customer" fx:id="cboBusinessGroup" minWidth="185.0" promptText="Select Business Group" GridPane.columnIndex="3" GridPane.rowIndex="1">
                 <contextMenu>
-                    <ContextMenu fx:id ="cmuSelectBusinessGroup" id = "Customer">
+                    <ContextMenu id="Customer" fx:id="cmuSelectBusinessGroup">
                         <items>
-                            <MenuItem mnemonicParsing="false" fx:id ="cmiSelectBusinessGroup" id = "Customer" text="Select Business Group" />
+                            <MenuItem id="Customer" fx:id="cmiSelectBusinessGroup" mnemonicParsing="false" text="Select Business Group" />
                         </items>
                     </ContextMenu>
                 </contextMenu>
             </ComboBox>  
-            <Label id="Customer" fx:id="lblVATBusinessGroup" minWidth="100" text="VAT Business Group" GridPane.columnIndex="0" GridPane.rowIndex="10" />
-            <ComboBox fx:id = "cboVATBusinessGroup" id = "Customer"  GridPane.rowIndex = "10" GridPane.columnIndex = "1" promptText = "Select VAT Business Group" minWidth="185.0">
+            <Label id="Customer" fx:id="lblVATBusinessGroup" minWidth="100" text="VAT Business Group" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <ComboBox id="Customer" fx:id="cboVATBusinessGroup" minWidth="185.0" promptText="Select VAT Business Group" GridPane.columnIndex="3" GridPane.rowIndex="2">
                 <contextMenu>
-                    <ContextMenu fx:id ="cmuSelectVATBusinessGroup" id = "Customer">
+                    <ContextMenu id="Customer" fx:id="cmuSelectVATBusinessGroup">
                         <items>
-                            <MenuItem mnemonicParsing="false" fx:id ="cmiSelectVATBusinessGroup" id = "Customer" text="Select VAT Business Group" />
+                            <MenuItem id="Customer" fx:id="cmiSelectVATBusinessGroup" mnemonicParsing="false" text="Select VAT Business Group" />
                         </items>
                     </ContextMenu>
                 </contextMenu>
             </ComboBox>  
-            <Label id="Customer" fx:id="lblReferenceNo" minWidth="100" text="Reference No" GridPane.columnIndex="0" GridPane.rowIndex="11" />
-            <TextField fx:id = "txtReferenceNo" id = "Customer"  GridPane.rowIndex = "11" GridPane.columnIndex = "1" minWidth="100" promptText = "Enter Reference No"/> 
-            <Label id="Customer" fx:id="lblBalance" minWidth="100" text="Balance" GridPane.columnIndex="0" GridPane.rowIndex="12" />
-            <TextField fx:id = "txtBalance" id = "Customer"  GridPane.rowIndex = "12" GridPane.columnIndex = "1" minWidth="100" editable = "false"/>
+            <Label id="Customer" fx:id="lblSponser" minWidth="100" text="Can Sponser" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <CheckBox id="Customer" fx:id="chkSponser" GridPane.columnIndex="3" GridPane.rowIndex="3" /> 
+            <Label id="Customer" fx:id="lblSponserOnly" minWidth="100" text="Sponser Only" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <CheckBox id="Customer" fx:id="chkSponserOnly" GridPane.columnIndex="3" GridPane.rowIndex="4" /> 
+            <Label id="Customer" fx:id="lblAllowCredit" minWidth="100" text="Allow Credit" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+            <CheckBox id="Customer" fx:id="chkAllowCredit" GridPane.columnIndex="3" GridPane.rowIndex="5" /> 
+            <Label id="Customer" fx:id="lblReferenceNo" minWidth="100" text="Reference No" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+            <TextField id="Customer" fx:id="txtReferenceNo" minWidth="100" promptText="Enter Reference No" GridPane.columnIndex="3" GridPane.rowIndex="6" /> 
+            <Label id="Customer" fx:id="lblBalance" minWidth="100" text="Balance" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+            <TextField id="Customer" fx:id="txtBalance" minWidth="100" promptText="Enter Balance" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+        
+         
         </GridPane>
+        <TableView id="PossibleSponsers" fx:id="tblPossibleSponsers" minHeight="200" minWidth="450" prefHeight="200.0" prefWidth="663.0" VBox.vgrow="ALWAYS">
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            </padding>
+            <columns>
+                <TableColumn id="Customer" fx:id="tbcCustomerCustomerID" editable="true" text="Customer ID">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="CustomerID" />
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn id="Customer" fx:id="tbcCustomerCustomerDisplay" editable="true" text="Customer">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="CustomerName" />
+                    </cellValueFactory>
+                </TableColumn>
+            </columns>
+            <contextMenu>
+                <ContextMenu id="Customer" fx:id="cmuPossibleSponsers">
+                    <items>
+                        <MenuItem id="Customer" fx:id="cmiSelectPossibleSponsers" mnemonicParsing="false" text="Select Possible Sponsers" />
+                    </items>
+                </ContextMenu>
+            </contextMenu>
+        </TableView>
         <AnchorPane>
             <VBox spacing="2" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="7.0">
-                <Button id="Customer" fx:id="btnSearch"  prefWidth="80.0" text="Search" visible="false" />
-                <Button id="Customer" fx:id="btnSave"  prefHeight="25.0" prefWidth="80.0" text="Save" />
+                <Button id="Customer" fx:id="btnSearch" prefWidth="80.0" text="Search" visible="false" />
+                <Button id="Customer" fx:id="btnSave" prefHeight="25.0" prefWidth="80.0" text="Save" />
             </VBox>
             <VBox spacing="2" AnchorPane.bottomAnchor="27.0" AnchorPane.rightAnchor="7.0">
-                <Button id="Customer" fx:id="btnDelete"  prefWidth="80.0" text="Delete" visible="false" />
-                <Button id="Customer" fx:id="btnClose"  prefHeight="25.0" prefWidth="80.0" text="Close" />
+                <Button id="Customer" fx:id="btnDelete" prefWidth="80.0" text="Delete" visible="false" />
+                <Button id="Customer" fx:id="btnClose" prefHeight="25.0" prefWidth="80.0" text="Close" />
             </VBox>
         </AnchorPane>
     </children>
 
 </VBox>
-
