--- a/src/main/resources/com/saburi/finance/main/Invoice.fxml
+++ b/src/main/resources/com/saburi/finance/main/Invoice.fxml
@@ -8,18 +8,19 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.Tab?>
-<VBox fx:id = "mVBox" id="Invoice"  spacing="10"  xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.saburi.finance.controllers.InvoiceController">
+<VBox fx:id = "mVBox" id="Invoice"  spacing="2"  xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.saburi.finance.controllers.InvoiceController">
     <children>
-        <GridPane fx:id = "mGrid" vgap ="4" hgap="10">
+
+        <GridPane vgap ="2" hgap="5">
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
@@ -37,26 +38,32 @@
             <DatePicker fx:id = "dtpInvoiceDate" id = "Invoice"  GridPane.rowIndex = "1" GridPane.columnIndex = "1" minWidth="185.0"/> 
             <Label id="Invoice" fx:id="lblInvoiceType" minWidth="100" text="Invoice Type" GridPane.columnIndex="0" GridPane.rowIndex="2" />
             <ComboBox fx:id = "cboInvoiceType" id = "Invoice"  GridPane.rowIndex = "2" GridPane.columnIndex = "1" promptText = "Select Invoice Type" minWidth="185.0"/> 
-            <Label id="Invoice" fx:id="lblBillTo" minWidth="100" text="Bill To" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-            <ComboBox fx:id = "cboBillTo" id = "Invoice"  GridPane.rowIndex = "0" GridPane.columnIndex = "3" promptText = "Select Bill To" minWidth="185.0">
+            <Label id="Invoice" fx:id="lblSellTo" minWidth="100" text="Sell To" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+            <ComboBox fx:id = "cboSellTo" id = "Invoice"  GridPane.rowIndex = "0" GridPane.columnIndex = "3" promptText = "Select Sell To" minWidth="185.0">
                 <contextMenu>
-                    <ContextMenu fx:id ="cmuSelectBillTo" id = "Invoice">
+                    <ContextMenu fx:id ="cmuSelectSellTo" id = "Invoice">
                         <items>
-                            <MenuItem mnemonicParsing="false" fx:id ="cmiSelectBillTo" id = "Invoice" text="Select BillTo" />
+                            <MenuItem mnemonicParsing="false" fx:id ="cmiSelectSellTo" id = "Invoice" text="Select Sell To" />
                         </items>
                     </ContextMenu>
                 </contextMenu>
             </ComboBox>  
-            <Label id="Invoice" fx:id="lblAmount" minWidth="100" text="Amount" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <TextField fx:id = "txtAmount" id = "Invoice"  GridPane.rowIndex = "1" GridPane.columnIndex = "3" minWidth="100" editable ="false" /> 
-            <Label id="Invoice" fx:id="lblAmountWords" minWidth="100" text="Amount Words" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <TextArea fx:id = "txaAmountWords" id = "Invoice"  GridPane.rowIndex = "2" GridPane.columnIndex = "3" prefWidth="100" editable ="false" />
+            <Label id="Invoice" fx:id="lblBillTo" minWidth="100" text="Bill To" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <ComboBox fx:id = "cboBillTo" id = "Invoice"  GridPane.rowIndex = "1" GridPane.columnIndex = "3" promptText = "Select Bill To" minWidth="185.0">
+                <contextMenu>
+                    <ContextMenu fx:id ="cmuSelectBillTo" id = "Invoice">
+                        <items>
+                            <MenuItem mnemonicParsing="false" fx:id ="cmiSelectBillTo" id = "Invoice" text="Select Bill To" />
+                        </items>
+                    </ContextMenu>
+                </contextMenu>
+            </ComboBox>  
+            <Label id="Invoice" fx:id="lblAmount" minWidth="100" text="Amount" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <TextField fx:id = "txtAmount" id = "Invoice"  GridPane.rowIndex = "2" GridPane.columnIndex = "3" minWidth="100" editable = "false"/> 
+            <Label id="Invoice" fx:id="lblAmountWords" minWidth="100" text="Amount Words" GridPane.columnIndex="4" GridPane.rowIndex="0" />
+            <TextArea fx:id = "txaAmountWords" id = "Invoice"  GridPane.rowIndex = "0" GridPane.columnIndex = "5" prefWidth="150" prefHeight="50" editable = "false"/>
         </GridPane>
-
         <TableView fx:id="tblInvoiceDetails" id = "InvoiceDetails" VBox.vgrow="ALWAYS" minHeight="300" minWidth="450">
-            <padding>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-            </padding>
             <columns>
                 <TableColumn id="Invoice" fx:id="tbcInvoiceDetailsItemID" text="Item ID" editable="true">
                     <cellValueFactory>
@@ -70,7 +77,7 @@
                 </TableColumn>
                 <TableColumn id="Invoice" fx:id="tbcInvoiceDetailsBaseQuantity" text="Base Quantity" editable="true">
                     <cellValueFactory>
-                        <PropertyValueFactory property="BaseQuantity" />
+                        <PropertyValueFactory property="BaseQuantityDisplay" />
                     </cellValueFactory>
                 </TableColumn>
                 <TableColumn id="Invoice" fx:id="tbcInvoiceDetailsUnitMeasure" text="Unit Measure" editable="true">
@@ -80,12 +87,12 @@
                 </TableColumn>
                 <TableColumn id="Invoice" fx:id="tbcInvoiceDetailsMeasureSize" text="Measure Size" editable="true">
                     <cellValueFactory>
-                        <PropertyValueFactory property="MeasureSize" />
+                        <PropertyValueFactory property="MeasureSizeDisplay" />
                     </cellValueFactory>
                 </TableColumn>
                 <TableColumn id="Invoice" fx:id="tbcInvoiceDetailsQuantity" text="Quantity" editable="true">
                     <cellValueFactory>
-                        <PropertyValueFactory property="Quantity" />
+                        <PropertyValueFactory property="QuantityDisplay" />
                     </cellValueFactory>
                 </TableColumn>
                 <TableColumn id="Invoice" fx:id="tbcInvoiceDetailsUnitPrice" text="Unit Price" editable="true">
@@ -105,7 +112,7 @@
                 </TableColumn>
                 <TableColumn id="Invoice" fx:id="tbcInvoiceDetailsLocation" text="Location" editable="true">
                     <cellValueFactory>
-                        <PropertyValueFactory property="LocationDisplay" />
+                        <PropertyValueFactory property="Location" />
                     </cellValueFactory>
                 </TableColumn>
             </columns>
@@ -117,8 +124,6 @@
                 </ContextMenu>
             </contextMenu>
         </TableView>
-
-
         <AnchorPane>
             <VBox spacing="2" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="7.0">
                 <Button id="Invoice" fx:id="btnSearch"  prefWidth="80.0" text="Search" visible="false" />
