--- a/src/main/resources/com/saburi/finance/main/SaleOrder.fxml
+++ b/src/main/resources/com/saburi/finance/main/SaleOrder.fxml
@@ -17,14 +17,14 @@
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.Tab?>
-<VBox fx:id = "mVBox" id="SaleOrder"  spacing="5"  xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.saburi.finance.controllers.SaleOrderController">
+<VBox fx:id = "mVBox" id="SaleOrder"  spacing="2" prefWidth="850"  xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.saburi.finance.controllers.SaleOrderController">
     <children>
-        <GridPane vgap ="2" hgap="10">
+
+        <GridPane vgap ="2" hgap="5">
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
-            <Label id="SaleOrder" fx:id="lblSaleOrderID" minWidth="100" text="Sale Order ID" GridPane.columnIndex="0" 
-                   GridPane.rowIndex="0" />
+            <Label id="SaleOrder" fx:id="lblSaleOrderID" minWidth="100" text="Sale Order ID" GridPane.columnIndex="0" GridPane.rowIndex="0" />
             <TextField fx:id = "txtSaleOrderID" id = "SaleOrder"  GridPane.rowIndex = "0" GridPane.columnIndex = "1"  minWidth="100" promptText = "Enter Sale Order ID">
                 <contextMenu>
                     <ContextMenu fx:id ="cmuSelectSaleOrderID" id = "SaleOrder">
@@ -37,13 +37,13 @@
             <Label id="SaleOrder" fx:id="lblOrderDate" minWidth="100" text="Order Date" GridPane.columnIndex="0" GridPane.rowIndex="1" />
             <DatePicker fx:id = "dtpOrderDate" id = "SaleOrder"  GridPane.rowIndex = "1" GridPane.columnIndex = "1" minWidth="185.0"/> 
             <Label id="SaleOrder" fx:id="lblShipAddress" minWidth="100" text="Ship Address" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-            <TextArea fx:id = "txaShipAddress" id = "SaleOrder"  GridPane.rowIndex = "2" GridPane.columnIndex = "1" prefWidth="100" promptText = "Enter Ship Address"/> 
+            <TextArea fx:id = "txaShipAddress" id = "SaleOrder"  GridPane.rowIndex = "2" GridPane.columnIndex = "1" prefWidth="100" prefHeight="50" promptText = "Enter Ship Address"/> 
             <Label id="SaleOrder" fx:id="lblSellTo" minWidth="100" text="Sell To" GridPane.columnIndex="0" GridPane.rowIndex="3" />
             <ComboBox fx:id = "cboSellTo" id = "SaleOrder"  GridPane.rowIndex = "3" GridPane.columnIndex = "1" promptText = "Select Sell To" minWidth="185.0">
                 <contextMenu>
                     <ContextMenu fx:id ="cmuSelectSellTo" id = "SaleOrder">
                         <items>
-                            <MenuItem mnemonicParsing="false" fx:id ="cmiSelectSellTo" id = "SaleOrder" text="Select SellTo" />
+                            <MenuItem mnemonicParsing="false" fx:id ="cmiSelectSellTo" id = "SaleOrder" text="Select Sell To" />
                         </items>
                     </ContextMenu>
                 </contextMenu>
@@ -53,73 +53,62 @@
                 <contextMenu>
                     <ContextMenu fx:id ="cmuSelectBillTo" id = "SaleOrder">
                         <items>
-                            <MenuItem mnemonicParsing="false" fx:id ="cmiSelectBillTo" id = "SaleOrder" text="Select BillTo" />
+                            <MenuItem mnemonicParsing="false" fx:id ="cmiSelectBillTo" id = "SaleOrder" text="Select Bill To" />
                         </items>
                     </ContextMenu>
                 </contextMenu>
             </ComboBox>  
-            <Label id="SaleOrder" fx:id="lblCurrency" minWidth="100" text="Currency" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <ComboBox fx:id = "cboCurrency" id = "SaleOrder"  GridPane.rowIndex = "1" GridPane.columnIndex = "3" promptText = "Select Currency" minWidth="185.0">
-                <contextMenu>
-                    <ContextMenu fx:id ="cmuSelectCurrency" id = "SaleOrder">
-                        <items>
-                            <MenuItem mnemonicParsing="false" fx:id ="cmiSelectCurrency" id = "SaleOrder" text="Select Currency" />
-                        </items>
-                    </ContextMenu>
-                </contextMenu>
-            </ComboBox>  
-            <Label id="SaleOrder" fx:id="lblAmount" minWidth="100" text="Amount" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <TextField fx:id = "txtAmount" id = "SaleOrder"  GridPane.rowIndex = "2" GridPane.columnIndex = "3" minWidth="100" editable = "false"/> 
-            <Label id="SaleOrder" fx:id="lblAmountWords" minWidth="100" text="Amount Words" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <TextArea fx:id = "txaAmountWords" id = "SaleOrder"  GridPane.rowIndex = "3" GridPane.columnIndex = "3" prefWidth="100" editable = "false"/>
+            <Label id="SaleOrder" fx:id="lblAmount" minWidth="100" text="Amount" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <TextField fx:id = "txtAmount" id = "SaleOrder"  GridPane.rowIndex = "1" GridPane.columnIndex = "3" minWidth="100" editable = "false"/> 
+            <Label id="SaleOrder" fx:id="lblAmountWords" minWidth="100" text="Amount Words" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <TextArea fx:id = "txaAmountWords" id = "SaleOrder"  GridPane.rowIndex = "2" GridPane.columnIndex = "3" prefWidth="100" prefHeight="50" editable = "false"/> 
+            <Label id="SaleOrder" fx:id="lblStatus" minWidth="100" text="Status" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <ComboBox fx:id = "cboStatus" id = "SaleOrder"  GridPane.rowIndex = "3" GridPane.columnIndex = "3" promptText = "Select Status" minWidth="185.0"/>
         </GridPane>
-
-        <TableView fx:id="tblSaleOrderDetails" id = "SaleOrderDetails" VBox.vgrow="ALWAYS" minHeight="300" minWidth="450">
-            <padding>
-                <Insets bottom="0.0" left="10.0" right="10.0" top="0.0" />
-            </padding>
+        <TableView fx:id="tblSaleOrderDetails" id = "SaleOrderDetails" VBox.vgrow="ALWAYS" minHeight="300" prefWidth="850">
+            
             <columns>
-                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailItemID" text="Item ID" editable="true" minWidth="100">
+                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailItemID" text="Item ID" editable="true">
                     <cellValueFactory>
                         <PropertyValueFactory property="ItemID" />
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailItemDisplay" text="Item" editable="true" minWidth="100">
+                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailItemDisplay" text="Item" editable="true">
                     <cellValueFactory>
                         <PropertyValueFactory property="ItemDisplay" />
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailBaseQuantity" text="Base Quantity" editable="true" minWidth="100">
+                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailBaseQuantity" text="Base Quantity" editable="true">
                     <cellValueFactory>
-                        <PropertyValueFactory property="BaseQuantity" />
+                        <PropertyValueFactory property="BaseQuantityDisplay" />
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailUnitMeasure" text="Unit Measure" editable="true" minWidth="100" >
+                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailUnitMeasure" text="Unit Measure" editable="true">
                     <cellValueFactory>
                         <PropertyValueFactory property="UnitMeasure" />
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailMeasureSize" text="Measure Size" editable="true" minWidth="100">
+                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailMeasureSize" text="Measure Size" editable="true">
                     <cellValueFactory>
-                        <PropertyValueFactory property="MeasureSize" />
+                        <PropertyValueFactory property="MeasureSizeDisplay" />
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailQuantity" text="Quantity" editable="true" minWidth="100">
+                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailQuantity" text="Quantity" editable="true">
                     <cellValueFactory>
-                        <PropertyValueFactory property="Quantity" />
+                        <PropertyValueFactory property="QuantityDisplay" />
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailUnitPrice" text="Unit Price" editable="true" minWidth="100">
+                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailUnitPrice" text="Unit Price" editable="true">
                     <cellValueFactory>
                         <PropertyValueFactory property="UnitPriceDisplay" />
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailDiscount" text="Discount" editable="true" minWidth="100">
+                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailDiscount" text="Discount" editable="true">
                     <cellValueFactory>
                         <PropertyValueFactory property="DiscountDisplay" />
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailAmount" text="Amount" editable="true" minWidth="100">
+                <TableColumn id="SaleOrder" fx:id="tbcSaleOrderDetailAmount" text="Amount" editable="true">
                     <cellValueFactory>
                         <PropertyValueFactory property="AmountDisplay" />
                     </cellValueFactory>
